--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 layout: home
 # Index page
 ---
+
+> **Note**: This site's theme and some content are based on [haxj's blog repository](https://github.com/haxj/haxj.github.io). The content has been modified and customized for my personal use with attribution to the original author.
